[project]
name = "docs-crawler"
version = "0.1.0"
description = "A simple script for scraping technical docs and generating a single PDF"
authors = [
    {name = "technoir",email = "36206067+0xtechnoir@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "weasyprint (>=66.0,<67.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

