[project]
name = "docs-crawler"
version = "0.1.0"
description = "A simple script for scraping technical docs and generating a single PDF"
authors = [
    {name = "technoir", email = "36206067+0xtechnoir@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "markdownify>=1.1.0",
    "tqdm>=4.67.1",
    "weasyprint>=66.0"
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["docs-crawler.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "I",  # isort
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
